src/objects/Contact.object
<CustomObject> 
    <!-- Existing Participant Fields -->
    <fields>
        <fullName>Agape_Adaptive_Equipment_Required__c</fullName>
        <label>Adaptive Equipment Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Service_Location__c</fullName>
        <label>Agape Service Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cicero</fullName>
                    <default>true</default>
                    <label>Cicero</label>
                </value>
                <value>
                    <fullName>Bradford Woods</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Age__c</fullName>
        <formula>FLOOR((TODAY()- Agape_Birthdate__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agape_Ambulatory_Status__c</fullName>
        <label>Ambulatory Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Behavioral_Status__c</fullName>
        <label>Behavioral Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Bridle_Reins__c</fullName>
        <label>Bridle/Reins</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reins on Halter</fullName>
                </value>
                <value>
                    <fullName>Reins on Bridle</fullName>
                </value>
                <value>
                    <fullName>No Reins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allen</fullName>
                </value>
                <value>
                    <fullName>Bartholomew</fullName>
                </value>
                <value>
                    <fullName>Boone</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Cass</fullName>
                </value>
                <value>
                    <fullName>Clinton</fullName>
                </value>
                <value>
                    <fullName>DeKalb</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Fayette</fullName>
                </value>
                <value>
                    <fullName>Fountain</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Greene</fullName>
                </value>
                <value>
                    <fullName>Hamilton</fullName>
                </value>
                <value>
                    <fullName>Hancock</fullName>
                </value>
                <value>
                    <fullName>Hendricks</fullName>
                </value>
                <value>
                    <fullName>Henry</fullName>
                </value>
                <value>
                    <fullName>Howard</fullName>
                </value>
                <value>
                    <fullName>Jackson</fullName>
                </value>
                <value>
                    <fullName>Jasper</fullName>
                </value>
                <value>
                    <fullName>Johnson</fullName>
                </value>
                <value>
                    <fullName>Kosciuosko</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lawrence</fullName>
                </value>
                <value>
                    <fullName>Madison</fullName>
                </value>
                <value>
                    <fullName>Marion</fullName>
                </value>
                <value>
                    <fullName>Martin</fullName>
                </value>
                <value>
                    <fullName>Monroe</fullName>
                </value>
                <value>
                    <fullName>Montgomery</fullName>
                </value>
                <value>
                    <fullName>Morgan</fullName>
                </value>
                <value>
                    <fullName>Newton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Demographics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demographics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agape_Direction_Following_Ability__c</fullName>
        <label>Direction Following Ability</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Dislikes__c</fullName>
        <label>Dislikes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Dismount__c</fullName>
        <label>Dismount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Emergency_Form__c</fullName>
        <label>Emergency Medical Policy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Multi-racial</fullName>
                </value>
                <value>
                    <fullName>Native American</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Health_History_Physician_Release__c</fullName>
        <label>Physician Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Health_History__c</fullName>
        <label>Health History</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Height__c</fullName>
        <label>Height</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agape_Helmet_Size__c</fullName>
        <label>Helmet Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agape_How_rider_holds_reins__c</fullName>
        <label>How rider holds reins</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Rein</fullName>
                </value>
                <value>
                    <fullName>Neck Rein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Liability_Release__c</fullName>
        <label>Liability Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Likes__c</fullName>
        <label>Likes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Mount__c</fullName>
        <label>Mount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Paperwork_Expiration__c</fullName>
        <label>Paperwork Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Payment_Source_Notes__c</fullName>
        <inlineHelpText>Enter dates for funding source allocation(s).  Do not delete old funding source notes, but add to them when funding source changes.</inlineHelpText>
        <label>Payment Source Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Payment_Source__c</fullName>
        <label>Payment Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Pay</fullName>
                </value>
                <value>
                    <fullName>Agape Scholarship</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Bureau</fullName>
                </value>
                <value>
                    <fullName>Choices</fullName>
                </value>
                <value>
                    <fullName>TANF</fullName>
                </value>
                <value>
                    <fullName>Partner_Funded</fullName>
                    <label>Partner Funded</label>
                </value>
                <value>
                    <fullName>Partner-Agape Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Photo_Media_Release__c</fullName>
        <label>Photo &amp; Media Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Precautions__c</fullName>
        <label>Precautions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult co-participant, court ordered</fullName>
                </value>
                <value>
                    <fullName>Adult co-participant, non-court ordered</fullName>
                </value>
                <value>
                    <fullName>Alzheimer&apos;s Disease</fullName>
                </value>
                <value>
                    <fullName>Angelmans Syndrome</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Aspergers</fullName>
                </value>
                <value>
                    <fullName>At Risk Youth</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit Disorder</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit Hyperactivity Disorder</fullName>
                </value>
                <value>
                    <fullName>Auditory Processing Disorder</fullName>
                </value>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Beta Thalassemia</fullName>
                </value>
                <value>
                    <fullName>Bi-Polar Disorder</fullName>
                </value>
                <value>
                    <fullName>Brain Injuries</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Cerebellar Ataxia</fullName>
                </value>
                <value>
                    <fullName>Cerebellar Hypoplasia</fullName>
                </value>
                <value>
                    <fullName>Cerebral Palsy</fullName>
                </value>
                <value>
                    <fullName>Chromosome Disorder</fullName>
                </value>
                <value>
                    <fullName>Cognitive Disability</fullName>
                </value>
                <value>
                    <fullName>Congenital Anomaly</fullName>
                </value>
                <value>
                    <fullName>Constitutional Dwarfism</fullName>
                </value>
                <value>
                    <fullName>Court Ordered</fullName>
                </value>
                <value>
                    <fullName>Craniofacial Abnormality</fullName>
                </value>
                <value>
                    <fullName>Deafness</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Developmental Delay</fullName>
                </value>
                <value>
                    <fullName>Diabetes Melitis</fullName>
                </value>
                <value>
                    <fullName>Disruptive Mood Dysregulation Disorder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Program_Participation__c</fullName>
        <label>Program Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Therapeutic Riding</fullName>
                </value>
                <value>
                    <fullName>Therapeutic Riding (BW)</fullName>
                </value>
                <value>
                    <fullName>Therapeutic Riding (East)</fullName>
                </value>
                <value>
                    <fullName>Stirrup Success in the Stable</fullName>
                </value>
                <value>
                    <fullName>Stirrup Success in the Stable (BW)</fullName>
                </value>
                <value>
                    <fullName>Stirrup Success in the Stable (East)</fullName>
                </value>
                <value>
                    <fullName>Unbridled Leadership</fullName>
                </value>
                <value>
                    <fullName>Youth Leadership</fullName>
                </value>
                <value>
                    <fullName>Carriage Driving</fullName>
                </value>
                <value>
                    <fullName>Carriage Driving (BW)</fullName>
                </value>
                <value>
                    <fullName>Stirrup Success Mobile</fullName>
                </value>
                <value>
                    <fullName>Memory Lane</fullName>
                </value>
                <value>
                    <fullName>Adult Camp (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp Riley (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp Hi-Lite (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp R.O.C.K.S. (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp About Face (BW)</fullName>
                </value>
                <value>
                    <fullName>CHAMP Camp (BW)</fullName>
                </value>
                <value>
                    <fullName>Care for Kids (BW)</fullName>
                </value>
                <value>
                    <fullName>HEAR Indiana (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp Kan Du (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp Independence (BW)</fullName>
                </value>
                <value>
                    <fullName>Camp Little Red Door (BW)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Agape_Registration_Form__c</fullName>
        <label>Registration Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_Riding_Position_posture__c</fullName>
        <inlineHelpText>Please describe</inlineHelpText>
        <label>Riding Position/posture</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agape_Saddle__c</fullName>
        <label>Saddle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agape_Scholarship_Amount__c</fullName>
        <label>Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agape_Scholarship_Awarded__c</fullName>
        <label>Scholarship Awarded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Scholarship_Form__c</fullName>
        <label>Scholarship Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agape_School__c</fullName>
        <label>School/Day Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agape_Secondary_Diagnosis__c</fullName>
        <label>Secondary Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult co-participant, court ordered</fullName>
                </value>
                <value>
                    <fullName>Adult co-participant, non-court ordered</fullName>
                </value>
                <value>
                    <fullName>Alzheimer&apos;s Disease</fullName>
                </value>
                <value>
                    <fullName>Angelmans Syndrome</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Aspergers</fullName>
                </value>
                <value>
                    <fullName>At Risk Youth</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit Disorder</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit Hyperactivity Disorder</fullName>
                </value>
                <value>
                    <fullName>Auditory Processing Disorder</fullName>
                </value>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Beta Thalassemia</fullName>
                </value>
                <value>
                    <fullName>Bi-Polar Disorder</fullName>
                </value>
                <value>
                    <fullName>Brain Injuries</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Cerebellar Ataxia</fullName>
                </value>
                <value>
                    <fullName>Cerebellar Hypoplasia</fullName>
                </value>
                <value>
                    <fullName>Cerebral Palsy</fullName>
                </value>
                <value>
                    <fullName>Chromosome Disorder</fullName>
                </value>
                <value>
                    <fullName>Cognitive Disability</fullName>
                </value>
                <value>
                    <fullName>Congenital Anomaly</fullName>
                </value>
                <value>
                    <fullName>Court Ordered</fullName>
                </value>
                <value>
                    <fullName>Craniofacial Abnormality</fullName>
                </value>
                <value>
                    <fullName>Deafness</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Developmental Delay</fullName>
                </value>
                <value>
                    <fullName>Disruptive Mood Dysregulation Disorder</fullName>
                </value>
                <value>
                    <fullName>Down Syndrome</fullName>
                </value>
                <value>
                    <fullName>Drug Dependence/Recovering Addict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agape_Weight__c</fullName>
        <label>Weight</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <!-- End of Existing Paticipant Fields-->

    <!-- Existing Custom Contact Fields -->
    <fields>
        <fullName>Admin_Contact_Email__c</fullName>
        <label>Admin Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Mobile_Phone__c</fullName>
        <label>Admin Contact Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Name__c</fullName>
        <label>Admin Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Work_Phone__c</fullName>
        <label>Admin Contact Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agape_Admin_Contact__c</fullName>
        <label>Agape Admin Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agape_Program_Contact__c</fullName>
        <label>Agape Program Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cultivation_Stage__c</fullName>
        <label>Cultivation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Researched</fullName>
                </value>
                <value>
                    <fullName>Cultivated</fullName>
                </value>
                <value>
                    <fullName>Solicited</fullName>
                </value>
                <value>
                    <fullName>Recognized</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Online_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Newsletter</label>
        <type>Checkbox</type>
    </fields>
        <fields>
        <fullName>Parent_Email_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Email Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_s_Name__c</fullName>
        <label>Pet&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text Message</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Personal Email</fullName>
                </value>
                <value>
                    <fullName>Home Email</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
        <fields>
        <fullName>Program_Contact_Email__c</fullName>
        <label>Program Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_Contact_Mobile_Phone__c</fullName>
        <label>Program Contact Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Contact_Name__c</fullName>
        <label>Program Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Contact_Work_Phone__c</fullName>
        <label>Program Contact Work Phone</label>
        <type>Phone</type>
    </fields>
     <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Admin_Contact_Email__c</fullName>
        <label>Secondary Admin Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Admin_Contact_Mobile_Phone__c</fullName>
        <label>Secondary Admin Contact Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Admin_Contact_Work_Phone__c</fullName>
        <label>Secondary Admin Contact Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Admin__c</fullName>
        <label>Secondary Admin Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Program_Contact_Email__c</fullName>
        <label>Secondary Program Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Program_Contact_Mobile_Phone__c</fullName>
        <label>Secondary Program Contact Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Program_Contact_Name__c</fullName>
        <label>Secondary Program Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Program_Contact_Work_Phone__c</fullName>
        <label>Secondary Program Contact Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Volunteer_Email_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Email Group</label>
        <type>Checkbox</type>
    </fields>
    <!-- End Existing Custom Contact Fields -->
    <recordTypes>
        <fullName>Therapeutic_Riding_Partcipant</fullName>
        <active>true</active>
        <label>Therapeutic Riding Partcipant</label>
    </recordTypes>
</CustomObject>